--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ json = { package = "serde_json", version = "1.0.64" }
 reqwest = { version = "0.11.2", optional = true, default_features = false, features = ["blocking", "json", "rustls-tls"] }
 futures = "0.3"
 tokio = { version = "1.4.0", features = ["macros", "fs"] }
+crossterm = "0.19.0"
