--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2018"
 clap = "2.33.3" # cli
 google-cloud = { version = "0.2.1", features = ["storage"] }
 json = { package = "serde_json", version = "1.0.64" }
-reqwest = { version = "0.11.2", optional = true, default_features = false, features = ["blocking", "json", "rustls-tls"] }
 futures = "0.3"
 tokio = { version = "1.4.0", features = ["macros", "fs"] }
 crossterm = "0.19.0"
+magick_rust = "0.14.0"
